chore: change eslint config to give warning instead of error for unused vars

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
-  "env": { "node": true }
+  "extends": ["next", "next/core-web-vitals"],
+  "env": { "node": true },
+  "rules": {
+    "no-unused-vars": 1
+  }
 }
