--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "apollo-server-micro": "^3.1.2",
+    "graphql": "^15.5.1",
     "import-sort": "^6.0.0",
+    "micro": "^9.3.4",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
