--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "apollo-server-micro": "^3.1.2",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "import-sort": "^6.0.0",
     "micro": "^9.3.4",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
