--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@prisma/client": "^2.30.0",
     "apollo-server-micro": "^3.1.2",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
@@ -34,6 +35,7 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "prisma": "^2.30.0",
     "typescript": "4.3.5"
   },
   "resolutions": {
