--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "commit": "cz"
+    "commit": "cz",
+    "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
+    "seed": "prisma migrate reset --force"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -29,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/node": "^16.7.3",
     "@types/react": "17.0.16",
     "@types/styled-components": "^5.1.12",
     "commitizen": "^4.2.4",
@@ -36,6 +39,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "prisma": "^2.30.0",
+    "ts-node": "^10.2.1",
     "typescript": "4.3.5"
   },
   "resolutions": {
