--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@prisma/client": "^2.30.0",
     "apollo-server-micro": "^3.1.2",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
     "import-sort": "^6.0.0",
