--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
-    "import-sort": "^6.0.0",
     "micro": "^9.3.4",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -41,6 +40,7 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "import-sort-cli": "^6.0.0",
     "jest": "^27.1.0",
     "prisma": "^2.30.0",
     "ts-node": "^10.2.1",
