--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "ts-node": "ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
     "seed": "prisma migrate reset --force",
     "test": "jest",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -31,13 +33,22 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.4",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@graphql-codegen/cli": "2.1.1",
+    "@graphql-codegen/typescript": "2.1.2",
+    "@graphql-codegen/typescript-operations": "2.1.2",
+    "@graphql-codegen/typescript-resolvers": "2.1.2",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.3",
     "@types/react": "17.0.16",
     "@types/styled-components": "^5.1.12",
+    "babel-loader": "^8.2.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
@@ -46,10 +57,7 @@
     "jest": "^27.1.0",
     "prisma": "^2.30.0",
     "ts-node": "^10.2.1",
-    "typescript": "4.3.5",
-    "@graphql-codegen/typescript": "2.1.2",
-    "@graphql-codegen/typescript-resolvers": "2.1.2",
-    "@graphql-codegen/typescript-operations": "2.1.2"
+    "typescript": "4.3.5"
   },
   "resolutions": {
     "styled-components": "^5"
